Fixing home hero text center alignment

--- a/sass/partials/_page-home.scss
+++ b/sass/partials/_page-home.scss
@@ -36,10 +36,7 @@
             bottom: 50px;
             z-index: 5;
             width: 100%;
-            .container {
-                margin-left: 0;
-                margin-right: 0;
-            }
+                
         }
         h1 {
             color: $color-white;
@@ -58,8 +55,18 @@
             .group-4 {
                 white-space: nowrap;
             }
+        } // .header-main
+        .container {
+            &.home-hero-text-outer {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            &.home-hero-text-inner {
+                margin-left: 0;
+                margin-right: 0;
+            }
         }
-    } // .header-main
+    } 
     .main-logo {
         color: #fff;
     }
